--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,79 +30,81 @@
 		            <span class="home-info-block__span block__span">Время</span>
 		        </div>
 		        <ul class="home-info-block__main-list" id="schedule-list">
-		            <% today_schedules = VaccinationSchedule.where(vaccination_date: Date.today) %>
-		            <% if today_schedules.any? %>
-			            <% today_schedules.each do |schedule| %>
-			                <li class="home-info-block__main-list__item">
-			                    <span class="home-info-block__main-list__span list_span"><%= link_to schedule.personal.fio, personal_path(schedule.personal) %></span>
-			                    <span class="home-info-block__main-list__span list_span"><%= link_to schedule.vaccine.name, vaccine_path(schedule.vaccine) %></span>
-			                    <span class="home-info-block__main-list__span list_span"><%= schedule.room.name %></span>
-			                    <span class="home-info-block__main-list__span list_span"><%= schedule.vaccination_time.strftime("%H:%M") %></span>
-			                </li>
-			            <% end %>
-			           <% else %>
-			           	<li class="home-info-block__main-list__item no-shedule-today">
-				             На сегодня нет записей     
-			            </li>
-			           <% end %>
-		        </ul>
+				    <% today_schedules = VaccinationSchedule.where("vaccination_date::date = ?", Date.today) %>
+				    <% if today_schedules.any? %>
+				        <% today_schedules.each do |schedule| %>
+				            <li class="home-info-block__main-list__item">
+				                <span class="home-info-block__main-list__span list_span"><%= link_to schedule.personal.fio, personal_path(schedule.personal) %></span>
+				                <span class="home-info-block__main-list__span list_span"><%= link_to schedule.vaccine.name, vaccine_path(schedule.vaccine) %></span>
+				                <span class="home-info-block__main-list__span list_span"><%= schedule.room.name %></span>
+				                <span class="home-info-block__main-list__span list_span"><%= schedule.vaccination_time.strftime("%H:%M") %></span>
+				            </li>
+				        <% end %>
+				    <% else %>
+				        <li class="home-info-block__main-list__item no-shedule-today">
+				            На сегодня нет записей
+				        </li>
+				    <% end %>
+				</ul>
+
 		    </div>
 		</div>
 
 
 		<!-- app/views/pages/home.html.erb -->
 		<div class="nearest-vaccines home-info-block">
-		  <div class="home-info-block__header">
-		    <div class="home-info-block__header-text">
-		      <div class="home-info-block__title">Вакцинация <%= @current_month.strftime("%m-%Y") %></div>
-		      <p class="home-info-block__subtitle">
-		        Необходима вакцинация для <%= (@expiring_vaccinations.map(&:personal) + @missing_mandatory_vaccinations).uniq.count %> сотрудников
-		      </p>
+		    <div class="home-info-block__header">
+		        <div class="home-info-block__header-text">
+		            <div class="home-info-block__title">Вакцинация <%= @current_month.strftime("%m-%Y") %></div>
+		            <p class="home-info-block__subtitle">
+		                Необходима вакцинация для <%= (@expiring_vaccinations.map(&:personal) + @missing_mandatory_vaccinations).uniq.count %> сотрудников
+		            </p>
+		        </div>
+		        <%= link_to 'Назначить записи автоматически', generate_auto_schedules_path, method: :post, class: 'home-info-block__header-button' %>
 		    </div>
-		    <%= link_to 'Назначить записи автоматически', generate_auto_schedules_path, method: :post, class: 'home-info-block__header-button' %>
-		  </div>
 
-		  <div class="home-info-block__main">
-		    <div class="home-info-block__main-header">
-		      <span class="home-info-block__span">Сотрудник</span>
-		      <span class="home-info-block__span">Вакцина</span>
-		    </div>
-		    <ul class="home-info-block__main-list">
-		      <% displayed_vaccines = {} %>
+		    <div class="home-info-block__main">
+		        <div class="home-info-block__main-header">
+		            <span class="home-info-block__span">Сотрудник</span>
+		            <span class="home-info-block__span">Вакцина</span>
+		        </div>
+		        <ul class="home-info-block__main-list">
+		            <% displayed_vaccines = {} %>
 
-		      <% (@expiring_vaccinations.map(&:personal) + @missing_mandatory_vaccinations).uniq.each do |personal| %>
-		        <li class="home-info-block__main-list__item">
-		          <%= link_to personal.fio, personal_path(personal), class: 'home-info-block__main-list__link-person' %>
-		          <ul>
-		            <% Vaccine.where(mandatory: true).each do |vaccine| %>
-		              <% vaccination = personal.vaccinations.find_by(vaccine: vaccine) %>
-		              <% if vaccination.nil? || (vaccination.vaccination_date + vaccine.expiry_date.days).to_date.between?(@current_month.beginning_of_month, @current_month.end_of_month) %>
-		                <% unless displayed_vaccines[personal.id]&.include?(vaccine.id) %>
-		                  <% if vaccine.name.present? %>
-		                    <li style="width: 150%;">
-		                      <%= link_to vaccine.name, vaccine_path(vaccine), class: 'home-info-block__main-list__link-vaccine' %>
-		                      <% if VaccinationSchedule.exists?(personal: personal, vaccine: vaccine) %>
-		                        <span class="status"><i class="fa-solid fa-check status-fa"></i></span>
-		                      <% else %>
-		                        <span class="status"><i class="fa-solid fa-xmark status-fa status-fa_red"></i></span>
-		                      <% end %>
-		                    </li>
-		                    <% displayed_vaccines[personal.id] ||= [] %>
-		                    <% displayed_vaccines[personal.id] << vaccine.id %>
-		                  <% else %>
-		                    <li>
-		                      <span class="error">Название вакцины отсутствует</span>
-		                    </li>
-		                  <% end %>
-		                <% end %>
-		              <% end %>
+		            <% (@expiring_vaccinations.map(&:personal) + @missing_mandatory_vaccinations).uniq.each do |personal| %>
+		                <li class="home-info-block__main-list__item">
+		                    <%= link_to personal.fio, personal_path(personal), class: 'home-info-block__main-list__link-person' %>
+		                    <ul>
+		                        <% Vaccine.where(mandatory: true).each do |vaccine| %>
+		                            <% vaccination = personal.vaccinations.find_by(vaccine: vaccine) %>
+		                            <% if vaccination.nil? || (vaccination.vaccination_date + vaccine.expiry_date.days).to_date.between?(@current_month.beginning_of_month, @current_month.end_of_month) %>
+		                                <% unless displayed_vaccines[personal.id]&.include?(vaccine.id) %>
+		                                    <% if vaccine.name.present? %>
+		                                        <li style="width: 150%;">
+		                                            <%= link_to vaccine.name, vaccine_path(vaccine), class: 'home-info-block__main-list__link-vaccine' %>
+		                                            <% if VaccinationSchedule.exists?(personal: personal, vaccine: vaccine) %>
+		                                                <span class="status"><i class="fa-solid fa-check status-fa"></i></span>
+		                                            <% else %>
+		                                                <span class="status"><i class="fa-solid fa-xmark status-fa status-fa_red"></i></span>
+		                                            <% end %>
+		                                        </li>
+		                                        <% displayed_vaccines[personal.id] ||= [] %>
+		                                        <% displayed_vaccines[personal.id] << vaccine.id %>
+		                                    <% else %>
+		                                        <li>
+		                                            <span class="error">Название вакцины отсутствует</span>
+		                                        </li>
+		                                    <% end %>
+		                                <% end %>
+		                            <% end %>
+		                        <% end %>
+		                    </ul>
+		                </li>
 		            <% end %>
-		          </ul>
-		        </li>
-		      <% end %>
-		    </ul>
-		  </div>
-		</div>
+		        </ul>
+		    </div>
+</div>
+
 
 
 	</div>
