--- a/app/views/vaccination_schedules/new.html.erb
+++ b/app/views/vaccination_schedules/new.html.erb
@@ -1,3 +1,14 @@
+<% if @schedule.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@schedule.errors.count, "error") %> prohibited this schedule from being saved:</h2>
+    <ul>
+      <% @schedule.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <h1>Создание расписания вакцинации</h1>
 
 <%= form_with model: @schedule, local: true do |form| %>
